--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:20.15.0-alpine3.20
 EXPOSE 8080
 ENV DB_HOST=mysql
-RUN useradd expense
-RUN mkdir /opt/server
-RUN chown expense:expense -R /opt/server
+
+# Use adduser for Alpine instead of useradd
+RUN adduser -D expense && \
+    mkdir /opt/server && \
+    chown expense:expense -R /opt/server
 WORKDIR /opt/server
 COPY *.json .
 COPY *.js .
