--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.15.0-alpine3.20
+FROM node:20
 EXPOSE 8080
 ENV DB_HOST=mysql
 
@@ -9,5 +9,5 @@ RUN adduser -D expense && \
 WORKDIR /opt/server
 COPY *.json .
 COPY *.js .
-RUN npm install 
+RUN npm install
 CMD [ "node" , "index.js"]
